# kleanup

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
klean/: __init__.py  analyze.py  cli.py  config.py  execute.py  model.py  report.py  scan.py  smart.py  ui.py  undo.py
